<resources>
    <string name="app_name">Calculator</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button10">/</string>
    <string name="button11">*</string>
    <string name="button12">+</string>
    <string name="button13">-</string>
    <string name="button14">=</string>
    <string name="button15">clear</string>
    <string name="button16">0</string>
</resources>
