<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarFadeDuration="250"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button6"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="14dp"
        android:layout_toEndOf="@+id/button8"
        android:layout_toRightOf="@+id/button8"
        android:background="@android:color/holo_orange_light"
        android:minWidth="90dip"
        android:minHeight="45dip"
        android:text="@string/button7" />

    <Button
        android:id="@+id/button8"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button5"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="14dp"
        android:layout_toEndOf="@+id/button7"
        android:layout_toRightOf="@+id/button7"
        android:background="@android:color/holo_orange_light"
        android:minWidth="90dip"
        android:minHeight="45dip"
        android:text="@string/button8" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_above="@+id/button4"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="14dp"
        android:background="@android:color/holo_orange_light"
        android:minWidth="90dip"
        android:minHeight="45dip"
        android:text="@string/button9" />

    <Button
        android:id="@+id/button6"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_above="@+id/button3"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/button5"
        android:layout_toRightOf="@+id/button5"
        android:background="@android:color/holo_orange_light"
        android:minWidth="90dip"
        android:minHeight="45dip"
        android:text="@string/button4" />

    <Button
        android:id="@+id/button5"
        android:layout_width="90dp"
        android:layout_height="45dp"

        android:layout_above="@+id/button2"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/button4"
        android:layout_toRightOf="@+id/button4"
        android:background="@android:color/holo_orange_light"
        android:minWidth="90dip"
        android:minHeight="45dip"
        android:text="@string/button5" />

    <Button
        android:id="@+id/button4"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_above="@+id/button1"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/holo_orange_light"
        android:minWidth="90dip"
        android:minHeight="45dip"
        android:text="@string/button6" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="125dp"
        android:layout_toEndOf="@+id/button2"
        android:layout_toRightOf="@+id/button2"
        android:background="@android:color/holo_orange_light"
        android:minWidth="90dip"
        android:minHeight="45dip"
        android:text="@string/button1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginBottom="125dp"
        android:layout_toEndOf="@+id/button1"
        android:layout_toRightOf="@+id/button1"
        android:background="@android:color/holo_orange_light"
        android:minWidth="90dip"
        android:minHeight="45dip"
        android:text="@string/button2" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button19"
        android:layout_alignParentStart="true"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="17dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/holo_orange_light"
        android:minWidth="90dip"
        android:minHeight="45dip"
        android:text="@string/button3" />

    <Button
        android:id="@+id/button17"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="123dp"
        android:layout_toEndOf="@+id/button3"
        android:layout_toRightOf="@+id/button3"
        android:background="@android:color/holo_orange_light"
        android:text="@string/button12" />

    <Button
        android:id="@+id/button18"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_above="@+id/button17"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="9dp"
        android:layout_toEndOf="@+id/button6"
        android:layout_toRightOf="@+id/button6"
        android:background="@android:color/holo_orange_light"
        android:text="@string/button11" />

    <Button
        android:id="@+id/button19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="69dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/button15" />

    <Button
        android:id="@+id/button16"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_above="@+id/button18"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="14dp"
        android:layout_toEndOf="@+id/button"
        android:layout_toRightOf="@+id/button"
        android:background="@android:color/holo_orange_light"
        android:text="@string/button10" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="309dp"
        android:layout_height="119dp"
        android:layout_above="@+id/button8"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="37dp"
        android:layout_marginBottom="292dp"
        android:text="TextView" />

    <Button
        android:id="@+id/button20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginBottom="68dp"
        android:layout_toEndOf="@+id/button19"
        android:layout_toRightOf="@+id/button19"
        android:text="@string/button16" />

</RelativeLayout>